.archive/clusters/homelab-1/.network-policies/allow-ingress-from-prometheus/source/network-policy.yaml
apiVersion: networking.k8s.io/v1
kind: NetworkPolicy
metadata:
  name: allow-egress-from-prometheus
spec:
  podSelector:
    matchLabels:
      app.kubernetes.io/name: prometheus
      app.kubernetes.io/instance: kube-prometheus-stack-app
  policyTypes:
    - Egress
  egress:
    - to:
        - podSelector:
            matchLabels:
              networking/allow-ingress-to-prometheus: "true"
